--- a/features/login/login.module.scss
+++ b/features/login/login.module.scss
@@ -4,6 +4,27 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  background-color: rgb(210 200 200);
+}
+
+.context {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(244 244 244);
+  padding: 2rem;
+  border-radius: 4rem;
+}
+
+.title {
+  font-size: 30px;
+  font-weight: 800;
+  background-image: linear-gradient(to left, #553c9a, #b393d3);
+  color: transparent;
+  background-clip: text;
+  margin-bottom: 2rem;
+  background-clip: text;
 }
 
 .user {
@@ -20,22 +41,28 @@
 .input {
   height: 30px;
   margin: 5px;
+  border-radius: 5px;
+  border: 1px solid white;
+  outline: none;
+  padding: 10px;
+  width: 200px;
 }
 
 .button {
   width: 145px;
   height: 30px;
-  background-color: teal;
+  background-color: rgb(0 0 255 / 60.5%);
   color: white;
   border: none;
   font-weight: bold;
   margin: 25px;
+  margin-top: 1rem;
   cursor: pointer;
   border-radius: 5px;
 }
 
 .button:disabled {
-  background-color: rgba(2, 100, 100, 0.474);
+  background-color: rgb(0 0 255 / 60.5%);
   cursor: not-allowed;
 }
 
